--- a/HTML5&CSS3.html
+++ b/HTML5&CSS3.html
@@ -5,22 +5,40 @@
 	<meta charset = "utf-8">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<script type="text/javascript">
+
+	</script>
 </head>
 <body>
 <div id = "container">
-	<nav>
-		<ul class="nav-1">
-			<li>1</li>
-			<li>2</li>
-			<li>3</li>
-			<li>4</li>
-		</ul>
-	</nav>
 	<section>
-	  	<div class="float-left"></div>
-	  	<div class="float-right"></div>
-		<div class="part-1"></div>
-		<div class="part-2"></div>
+	  <div class="part-1">
+			<nav>
+				<ul class="nav-1">
+					<li>1</li>
+					<li>2</li>
+					<li>3</li>
+					<li>4</li>
+				</ul>
+			</nav>
+			<ul class="big_pic">
+
+				<div class="prev"></div>
+				<div class="next"></div>
+
+				<a class="mark_left" href="javascript:;"></a>
+				<a href="mark_right" href="javascript:;"></a>
+
+				<li style="z-index:1;"><img src="img/img13.jpg"/></li>
+				<li><img src="img/img2.jpg"></li>
+				<li><img src="img/img1.jpg"></li>
+				<li><img src="img/img14.jpg"></li>
+			</ul>
+		</div>
+		<div class="part-2">
+				<div class="float-left"></div>
+	  			<div class="float-right"></div>
+		</div>
 		<div class="part-3"></div>
 	</section>
 	<footer>Copyright &copy; 2014-2015</footer>
