大图的样式完成

--- a/HTML5&CSS3.html
+++ b/HTML5&CSS3.html
@@ -27,7 +27,7 @@
 				<div class="next"></div>
 
 				<a class="mark_left" href="javascript:;"></a>
-				<a href="mark_right" href="javascript:;"></a>
+				<a class="mark_right" href="javascript:;"></a>
 
 				<li style="z-index:1;"><img src="img/img13.jpg"/></li>
 				<li><img src="img/img2.jpg"></li>
