导航栏还没搞好

--- a/HTML5&CSS3.html
+++ b/HTML5&CSS3.html
@@ -12,15 +12,21 @@
 <body>
 <div id = "container">
 	<section>
+		<nav>
+			<ul class="nav-1">
+				<li class="logo"></li>
+				<li>
+					<ul>
+						<li>1</li>
+						<li>2</li>
+						<li>3</li>
+						<li>4</li>
+					</ul>
+				</li>
+			</ul>
+		</nav>
 	  <div class="part-1">
-			<nav>
-				<ul class="nav-1">
-					<li>1</li>
-					<li>2</li>
-					<li>3</li>
-					<li>4</li>
-				</ul>
-			</nav>
+			
 			<ul class="big_pic">
 
 				<div class="prev"></div>
