导航栏就算布置好了吧

--- a/HTML5&CSS3.html
+++ b/HTML5&CSS3.html
@@ -16,14 +16,18 @@
 			<ul class="nav-1">
 				<li class="logo"></li>
 				<li>
-					<ul>
-						<li>1</li>
-						<li>2</li>
-						<li>3</li>
-						<li>4</li>
+					<ul class="nav-2">
+						<li><a href="javascript:;">Home</a></li>
+						<li><a href="javascript:;">XXX</a></li>
+						<li><a href="javascript:;">XXXX</a></li>
+						<li><a href="javascript:;">XXXXX</a></li>
+						<li><a href="javascript:;">XXXXXX</a></li>
 					</ul>
 				</li>
+				<img class="lock" src="img/locked.png"/>
+				<li class="log-in"><a href="javascript:;">Log In</a></li>
 			</ul>
+
 		</nav>
 	  <div class="part-1">
 			
