js刚刚起步就有问题。。。
getElementsByTagName怎么都undifiend了？？？

--- a/HTML5&CSS3.html
+++ b/HTML5&CSS3.html
@@ -5,19 +5,17 @@
 	<meta charset = "utf-8">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<script type="text/javascript">
-
-	</script>
+	<script type="text/javascript" src="js/nav.js"></script>
 </head>
 <body>
 <div id = "container">
-	<section>
-		<nav>
+	<section id = "part">
+		<nav id="nav">
 			<ul class="nav-1">
 				<li class="logo"></li>
 				<li>
 					<ul class="nav-2">
-						<li><a href="javascript:;">Home</a></li>
+						<li class=" "><a href="javascript:;">Home</a></li>
 						<li><a href="javascript:;">XXX</a></li>
 						<li><a href="javascript:;">XXXX</a></li>
 						<li><a href="javascript:;">XXXXX</a></li>
@@ -27,7 +25,11 @@
 				<img class="lock" src="img/locked.png"/>
 				<li class="log-in"><a href="javascript:;">Log In</a></li>
 			</ul>
-
+			<div class="nav-text"></div>
+			<div class="nav-text"></div>
+			<div class="nav-text"></div>
+			<div class="nav-text"></div>
+			<div class="nav-text"></div>
 		</nav>
 	  <div class="part-1">
 			
