--- a/HTML5&CSS3.html
+++ b/HTML5&CSS3.html
@@ -12,7 +12,7 @@
 	<section id = "part">
 		<nav id="nav">
 			<ul class="nav-1">
-				<li class="logo"></li>
+				<li class="logo"><span><img src="img/nav.png">young</span></li>
 				<li>
 					<ul class="nav-2">
 						<li class=" "><a href="javascript:;">Home</a></li>
@@ -25,11 +25,11 @@
 				<img class="lock" src="img/locked.png"/>
 				<li class="log-in"><a href="javascript:;">Log In</a></li>
 			</ul>
-			<div class="nav-text"></div>
-			<div class="nav-text"></div>
-			<div class="nav-text"></div>
-			<div class="nav-text"></div>
-			<div class="nav-text"></div>
+			<div class="nav-text">111</div>
+			<div class="nav-text">222</div>
+			<div class="nav-text">333</div>
+			<div class="nav-text">444</div>
+			<div class="nav-text">555</div>
 		</nav>
 	  <div class="part-1">
 			
