导航栏调大了

--- a/HTML5&CSS3.html
+++ b/HTML5&CSS3.html
@@ -12,7 +12,7 @@
 	<section id = "part">
 		<nav id="nav">
 			<ul class="nav-1">
-				<li class="logo"><span><img src="img/nav.png">young</span></li>
+				<li class="logo"><img src="img/nav.png">young</li>
 				<li>
 					<ul class="nav-2">
 						<li class=" "><a href="javascript:;">Home</a></li>
@@ -22,8 +22,7 @@
 						<li><a href="javascript:;">XXXXXX</a></li>
 					</ul>
 				</li>
-				<img class="lock" src="img/locked.png"/>
-				<li class="log-in"><a href="javascript:;">Log In</a></li>
+				<li class="log-in"><img class="lock" src="img/locked.png"/><a href="javascript:;">Log In</a></li>
 			</ul>
 			<div class="nav-text">111</div>
 			<div class="nav-text">222</div>
