js编写中还是出现了问题，CSS非行间样式获取不到

--- a/HTML5&CSS3.html
+++ b/HTML5&CSS3.html
@@ -15,7 +15,7 @@
 				<li class="logo"><img src="img/nav.png">young</li>
 				<li>
 					<ul class="nav-2">
-						<li class=" "><a href="javascript:;">Home</a></li>
+						<li><a href="javascript:;">Home</a></li>
 						<li><a href="javascript:;">XXX</a></li>
 						<li><a href="javascript:;">XXXX</a></li>
 						<li><a href="javascript:;">XXXXX</a></li>
@@ -24,11 +24,11 @@
 				</li>
 				<li class="log-in"><img class="lock" src="img/locked.png"/><a href="javascript:;">Log In</a></li>
 			</ul>
-			<div class="nav-text">111</div>
-			<div class="nav-text">222</div>
-			<div class="nav-text">333</div>
-			<div class="nav-text">444</div>
-			<div class="nav-text">555</div>
+			<div name="nav-text"class="nav-active">111</div>
+			<div name="nav-text">222</div>
+			<div name="nav-text">333</div>
+			<div name="nav-text">444</div>
+			<div name="nav-text">555</div>
 		</nav>
 	  <div class="part-1">
 			
