--- a/HTML5&CSS3.html
+++ b/HTML5&CSS3.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<script type="text/javascript" src="js/nav.js"></script>
+
 </head>
 <body>
 <div id = "container">
@@ -15,7 +16,7 @@
 				<li class="logo"><img src="img/nav.png">young</li>
 				<li>
 					<ul class="nav-2">
-						<li><a href="javascript:;">Home</a></li>
+						<li class=" "><a href="javascript:;">Home</a></li>
 						<li><a href="javascript:;">XXX</a></li>
 						<li><a href="javascript:;">XXXX</a></li>
 						<li><a href="javascript:;">XXXXX</a></li>
