part2照片部分，CSS采用了网络模板

--- a/HTML5&CSS3.html
+++ b/HTML5&CSS3.html
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<script type="text/javascript" src="js/nav.js"></script>
+	<script type="text/javascript">
 
+	</script>
 </head>
 <body>
 <div id = "container">
@@ -31,7 +33,7 @@
 			<div name="nav-text">444</div>
 			<div name="nav-text">555</div>
 		</nav>
-	  <div class="part-1">
+	  	<div class="part-1">
 			
 			<ul class="big_pic">
 
@@ -48,7 +50,13 @@
 			</ul>
 		</div>
 		<div class="part-2">
-				<div class="float-left"></div>
+				<div class="float-left">
+					<figure>
+						<a href="javascript:;"><img src="img/img15.jpg" alt="Poppy&rsquo;s Mean Face" /></a>
+						<a href="javascript:;"><img src="img/img18.jpg" alt="Poppy&rsquo;s Mean Face" /></a>
+						<a href="javascript:;"><img src="img/img11.jpg" alt="Poppy&rsquo;s Mean Face" /></a>
+					</figure>
+				</div>
 	  			<div class="float-right"></div>
 		</div>
 		<div class="part-3"></div>
