part2,还有结尾部分

--- a/HTML5&CSS3.html
+++ b/HTML5&CSS3.html
@@ -50,6 +50,7 @@
 			</ul>
 		</div>
 		<div class="part-2">
+			<div class="part-2-top">
 				<div class="float-left">
 					<figure>
 						<a href="javascript:;"><img src="img/img15.jpg" alt="Poppy&rsquo;s Mean Face" /></a>
@@ -57,7 +58,64 @@
 						<a href="javascript:;"><img src="img/img11.jpg" alt="Poppy&rsquo;s Mean Face" /></a>
 					</figure>
 				</div>
-	  			<div class="float-right"></div>
+	  			<div class="float-right">
+	  				<div class="para">
+	  					<h1><span class="opara" >we are</span> young</h1>
+	  					<div><span class='opara'>wind is transparent, the rain is ticking, the cloud is flowing, the song is free, love is the heart, love is crazy, it is eternity, you are unforgettable.</span></div>
+	  				</div>
+	  				<a href="javascript:;" class="enter-btn">Enter</a>
+	  			</div>
+	  		</div>
+	  		<div class="part-2-bottom">
+	  			<div class="bot-left">
+	  				<h1>To the Virgins, To Make Much of Time</h1>
+	  				<p>
+Gather ye rosebuds while you may,
+Old time still a-flying; 
+And this same flower that smiles today, 
+To-morrow will be dying. 
+
+The glorious lamp of heaven, the sun,
+The higher he's a-getting; 
+The sooner will his race be run, 
+And nearer he's to setting.
+
+That age is best which is the first, 
+When youth and blood are warmer;
+But being spent, the worse, and worst,
+Times still succeed the former.
+
+Then be not coy, but use your time,
+And while ye may, go marry;
+For having lost but once your prime,
+You may for ever tarry. 
+					</p>
+	  			</div>
+	  			<div class="bot-right">
+ 					<h1>致少女之珍惜青春</h1>
+	 				<p>
+快采下玫瑰花蕾，
+往昔如风恐难追；
+近日融融花语笑，
+明日寂寂残红坠。
+
+灿灿朝霞比天灯，   
+载光载热朝天腾，
+疾疾而行途乃近，
+昏昏暮霭落九层。
+
+年当豆蔻风华优，
+精力充沛血仍稠；
+韵华虚度朱颜改，
+春复秋来月悠悠。
+                 
+莫因娇羞惜爱怜，
+趁此春光嫁少年。
+等闲负了青春约，
+此生难再觅良缘。
+	  				</p>
+	  			</div>
+			</div>
 		</div>
 		<div class="part-3"></div>
 	</section>
