part2部分基本完成，之后着手CSS完成轮播图

--- a/HTML5&CSS3.html
+++ b/HTML5&CSS3.html
@@ -67,8 +67,9 @@
 	  			</div>
 	  		</div>
 	  		<div class="part-2-bottom">
+
 	  			<div class="bot-left">
-	  				<h1>To the Virgins, To Make Much of Time</h1>
+	  				<h1 class="title">To the Virgins Making Much of Time</h1>
 	  				<p>
 Gather ye rosebuds while you may,
 Old time still a-flying; 
@@ -92,7 +93,7 @@ You may for ever tarry.
 					</p>
 	  			</div>
 	  			<div class="bot-right">
- 					<h1>致少女之珍惜青春</h1>
+ 					<h1 class="title">致少女之珍惜青春</h1>
 	 				<p>
 快采下玫瑰花蕾，
 往昔如风恐难追；
@@ -115,7 +116,9 @@ You may for ever tarry.
 此生难再觅良缘。
 	  				</p>
 	  			</div>
+	  			<img class="background" src="img/background01.jpg">
 			</div>
+
 		</div>
 		<div class="part-3"></div>
 	</section>
