--- a/HTML5&CSS3.html
+++ b/HTML5&CSS3.html
@@ -5,6 +5,7 @@
 	<meta charset = "utf-8">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="css/sliderPPT.css">
 	<script type="text/javascript" src="js/nav.js"></script>
 	<script type="text/javascript">
 
