还是有点小瑕疵

--- a/轮播图.html
+++ b/轮播图.html
@@ -23,18 +23,18 @@
 	  <input type="radio" checked="checked" name="slideshow" id="slider06" />
 	  
 	    <div id="larrow">
-		<label for="slider01" class="l1"><</label>
-		<label for="slider02" class="l2"><</label>
-		<label for="slider03" class="l3"><</label>
-		<label for="slider04" class="l4"><</label>
-		<label for="slider05" class="l5"><</label>
+		<label for="slider01" class="l1"></label>
+		<label for="slider02" class="l2"></label>
+		<label for="slider03" class="l3"></label>
+		<label for="slider04" class="l4"></label>
+		<label for="slider05" class="l5"></label>
 		</div>
 		<div id="rarrow">
-		<label for="slider01" class="l6">></label>
-		<label for="slider02" class="l7">></label>
-		<label for="slider03" class="l8">></label>
-		<label for="slider04" class="l9">></label>
-		<label for="slider05" class="l10">></label>
+		<label for="slider01" class="l6"></label>
+		<label for="slider02" class="l7"></label>
+		<label for="slider03" class="l8"></label>
+		<label for="slider04" class="l9"></label>
+		<label for="slider05" class="l10"></label>
 		</div>
 	  <div id="inner">
 	    <ul>
